--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.0",
     "express": "^5.1.0",
     "lucide-react": "^0.344.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
